@@ -6,8 +6,6 @@ import java.util.function.Consumer;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
-import org.jboss.logging.Logger;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -18,10 +16,10 @@ import io.hyperfoil.tools.horreum.api.data.changeDetection.ChangeDetectionModelT
 import io.hyperfoil.tools.horreum.api.data.changeDetection.FixedThresholdDetectionConfig;
 import io.hyperfoil.tools.horreum.entity.alerting.ChangeDAO;
 import io.hyperfoil.tools.horreum.entity.alerting.DataPointDAO;
+import io.quarkus.logging.Log;
 
 @ApplicationScoped
 public class FixedThresholdModel implements ChangeDetectionModel {
-    private static final Logger log = Logger.getLogger(FixedThresholdModel.class);
 
     @Inject
     ObjectMapper mapper;
@@ -36,7 +34,6 @@ public class FixedThresholdModel implements ChangeDetectionModel {
                         "Upper bound for acceptable datapoint values.");
         conditionConfig.defaults.put("model", new TextNode(ChangeDetectionModelType.names.FIXED_THRESHOLD));
         return conditionConfig;
-
     }
 
     @Override
@@ -55,9 +52,9 @@ public class FixedThresholdModel implements ChangeDetectionModel {
             if (config.min.enabled) {
                 if ((!config.min.inclusive && dp.value <= config.min.value) || dp.value < config.min.value) {
                     ChangeDAO c = ChangeDAO.fromDatapoint(dp);
-                    c.description = String.format("%f is below lower bound %f (%s)", dp.value, config.min.value,
+                    c.description = "%f is below lower bound %f (%s)".formatted(dp.value, config.min.value,
                             config.min.inclusive ? "inclusive" : "exclusive");
-                    log.debug(c.description);
+                    Log.debug(c.description);
                     changeConsumer.accept(c);
                     return;
                 }
@@ -65,19 +62,18 @@ public class FixedThresholdModel implements ChangeDetectionModel {
             if (config.max.enabled) {
                 if ((!config.max.inclusive && dp.value >= config.max.value) || dp.value > config.max.value) {
                     ChangeDAO c = ChangeDAO.fromDatapoint(dp);
-                    c.description = String.format("%f is above upper bound %f (%s)", dp.value, config.max.value,
+                    c.description = "%f is above upper bound %f (%s)".formatted(dp.value, config.max.value,
                             config.max.inclusive ? "inclusive" : "exclusive");
-                    log.debug(c.description);
+                    Log.debug(c.description);
                     changeConsumer.accept(c);
                 }
             }
 
         } catch (JsonProcessingException e) {
-            String errMsg = String.format("Failed to parse configuration for variable %d", dp.variable.id);
-            log.error(errMsg, e);
+            String errMsg = "Failed to parse configuration for variable %d".formatted(dp.variable.id);
+            Log.error(errMsg, e);
             throw new ChangeDetectionException(errMsg, e);
         }
-
     }
 
     @Override
